@@ -390,6 +390,7 @@ extern const AVFilter ff_vf_scale_vaapi;
 extern const AVFilter ff_vf_scale_vulkan;
 extern const AVFilter ff_vf_scale2ref;
 extern const AVFilter ff_vf_scdet;
+extern const AVFilter ff_vf_scharr;
 extern const AVFilter ff_vf_scroll;
 extern const AVFilter ff_vf_segment;
 extern const AVFilter ff_vf_select;
